<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_FutureExecutionState" Id="{db307e80-41b8-4cda-abb3-bd9c8f7b3495}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_FutureExecutionState :
(
	idle := 0,
	init,
	wait_for_process,
	process,
	abort,
	pause,
	quit,
	finish
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>