<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_ADSLOG_reporter" Id="{ba91026f-1b14-496b-9bee-5db4c9acb690}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ADSLOG_reporter IMPLEMENTS InterfaceJobEventReporter
VAR_INPUT
END_VAR
VAR_OUTPUT
	{attribute 'TcEncoding':='UTF-8'}
	text : T_MAXSTRING;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="report" Id="{e5fac08e-bd79-4abd-97a0-a76262921e4d}">
      <Declaration><![CDATA[METHOD report : BOOL
VAR_INPUT
	old_state	: E_FutureExecutionState;
	new_state	: E_FutureExecutionState;
	record_time	: Tc2_Utilities.T_FILETIME64;
	executor	: REFERENCE TO FB_Executor;
END_VAR
VAR_INST
	fb_timezone_info : FB_GetTimeZoneInformation := (bExecute := TRUE);
END_VAR
VAR
	last_state : STRING;
	current_state : STRING;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[last_state := TO_STRING(old_state);
current_state := TO_STRING(new_state);

fb_timezone_info();
text := FILETIME64_TO_ISO8601(fileTime := record_time, nBias := DINT_TO_INT(fb_timezone_info.tzInfo.bias), bUTC := TRUE,nPrecision := 6);
text := CONCAT(text, '	');
text := CONCAT(text, TO_STRING(current_state));
text := CONCAT(text, '			');
text := CONCAT(text, executor.future.future_name);
text := CONCAT(text, '		');
text := CONCAT(text, executor.id);


ADSLOGSTR(msgCtrlMask := ADSLOG_MSGTYPE_LOG, msgFmtStr := text, strArg := '');

report := TRUE;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_ADSLOG_reporter">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_ADSLOG_reporter.report">
      <LineId Id="44" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="12" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>