<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_observer" Id="{ba91026f-1b14-496b-9bee-5db4c9acb690}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_observer IMPLEMENTS InterfaceObserver
VAR_INPUT
END_VAR
VAR_OUTPUT
	{attribute 'TcEncoding':='UTF-8'}
	text : T_MAXSTRING;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="subscribe_job_directory" Id="{cc4352ea-4318-48df-aee9-c6bfcea872ac}">
      <Declaration><![CDATA[METHOD subscribe_job_directory : BOOL
VAR_INPUT
	executor	: REFERENCE TO FB_Executor;
END_VAR
VAR
	job_log : STRING;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
job_log := CONCAT(job_log, 'JOB STRUCTURE');
IF executor.future <> 0 THEN
	job_log := CONCAT(job_log, '/ FUTURE_NAME : ');
	job_log := CONCAT(job_log, executor.future.future_name);
	job_log := CONCAT(job_log, ', ');	
END_IF
job_log := CONCAT(job_log, 'JOB_ID : ');
job_log := CONCAT(job_log, executor.id);

ADSLOGSTR(msgCtrlMask := ADSLOG_MSGTYPE_LOG, msgFmtStr := job_log, strArg := '');]]></ST>
      </Implementation>
    </Method>
    <Method Name="subscribe_job_event" Id="{e5fac08e-bd79-4abd-97a0-a76262921e4d}">
      <Declaration><![CDATA[METHOD subscribe_job_event : BOOL
VAR_INPUT
	old_state	: E_FutureExecutionState;
	new_state	: E_FutureExecutionState;
	record_time	: Tc2_Utilities.T_FILETIME64;
	executor	: REFERENCE TO FB_Executor;
END_VAR
VAR_INST
	fb_timezone_info : FB_GetTimeZoneInformation := (bExecute := TRUE);
END_VAR
VAR
	last_state : STRING;
	current_state : STRING;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[last_state := TO_STRING(old_state);
current_state := TO_STRING(new_state);

fb_timezone_info();
text := FILETIME64_TO_ISO8601(fileTime := record_time, nBias := DINT_TO_INT(fb_timezone_info.tzInfo.bias), bUTC := TRUE,nPrecision := 6);
text := CONCAT(text, '	');
text := CONCAT(text, TO_STRING(current_state));
text := CONCAT(text, '			');
text := CONCAT(text, executor.future.future_name);
text := CONCAT(text, '		');
text := CONCAT(text, executor.id);


ADSLOGSTR(msgCtrlMask := ADSLOG_MSGTYPE_LOG, msgFmtStr := text, strArg := '');

subscribe_job_event := TRUE;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_observer">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_observer.subscribe_job_directory">
      <LineId Id="9" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="23" Count="2" />
      <LineId Id="22" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
    <LineIds Name="FB_observer.subscribe_job_event">
      <LineId Id="120" Count="14" />
      <LineId Id="12" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>